Made index.html google's primary search page, added styling, and templates

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Search</title>
-    </head>
-    <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
-    </body>
+<head>
+    <meta charsets="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- icons: Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>Search</title>
+<body>
+    <!--Navbar-->
+    <nav class="navbar">
+        <div class="navbar-wrapper">
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <div class="app">
+                <i class="fas fa-ellipsis-v"></i>
+                <i class="fas fa-ellipsis-v"></i>
+                <i class="fas fa-ellipsis-v"></i>
+            </div>
+            <div class="account">
+                <img class="account" src="templates/account.JPG">
+            </div>
+        </div>
+    </nav>
+
+    <!--Main-->
+    <main>
+        <img class="logo" src="templates/google-logo.svg">
+        <div class="search">
+            <span class="fas fa-search"></span>
+            <input type="text">
+            <img src="templates/microphone.png">
+        </div>
+    </main>
+
+    <!-- footer-->
+</body>
 </html>
+
