Recreated the Google searcg UI but still need to add a form that will submit search results to the real Google

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <!--Navbar-->
     <nav class="navbar">
+        <div class="navbar-left">
+            <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+            <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+        </div>
+        </div>
         <div class="navbar-wrapper">
             <a href="#">Gmail</a>
             <a href="#">Images</a>
@@ -27,16 +32,39 @@
     </nav>
 
     <!--Main-->
+  
     <main>
-        <img class="logo" src="templates/google-logo.svg">
+        <img class="logo" src="templates/google-logo.svg" alt="Google Logo">
         <div class="search">
             <span class="fas fa-search"></span>
             <input type="text">
-            <img src="templates/microphone.png">
+            <img src="templates/microphone.png" alt="Google Microphone">
+            <img class="lens" src="templates/lens.png" alt="Google Image Search">
+        </div>
+        <div class="search-button">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
         </div>
     </main>
 
     <!-- footer-->
+    <footer>
+        <div class="footer-menu">
+            <div class="left-menu">
+                <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+                <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1">How search Works</a>
+            </div>
+            <div class="climate">
+                🥬 Our third decade of climate action: join us
+            </div>
+            <div class="right-menu">
+                <a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a>
+                <a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a>
+                <a href="#">Settings</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
