--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="navbar-wrapper">
             <a href="#">Gmail</a>
-            <a href="#">Images</a>
+            <a href="images.html">Images</a>
             <div class="app">
                 <i class="fas fa-ellipsis-v"></i>
                 <i class="fas fa-ellipsis-v"></i>
@@ -32,19 +32,23 @@
     </nav>
 
     <!--Main-->
-  
+    
     <main>
         <img class="logo" src="templates/google-logo.svg" alt="Google Logo">
+        <form action="https://www.google.com/search" method="GET">
         <div class="search">
             <span class="fas fa-search"></span>
-            <input type="text">
+            <input type="text" name="q" >
+            <!-- No functionality for the following two images-->
             <img src="templates/microphone.png" alt="Google Microphone">
             <img class="lens" src="templates/lens.png" alt="Google Image Search">
+
         </div>
         <div class="search-button">
-            <button>Google Search</button>
-            <button>I'm Feeling Lucky</button>
+            <button type="submit" name="btnK" value="Google Search">Google Search</button>
+            <button type="submit" name="btnI" value="I'm Feeling Lucky">I'm Feeling Lucky</button>
         </div>
+        </form>
     </main>
 
     <!-- footer-->
