Replicated the UI of the top 4 advanced search features. Finished styling the whole project. Project ready to be reviewed.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
             <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
         </div>
-        </div>
         <div class="navbar-wrapper">
-            <a href="#">Gmail</a>
+            <a href="advanced.html">Advanced</a>
             <a href="images.html">Images</a>
             <div class="app">
                 <i class="fas fa-ellipsis-v"></i>
